feat: Add Shodan data update command and configuration
- Introduced a new console command `UpdateShodanData` to fetch and update port security data from the Shodan API.
- Added configuration for Shodan API key and base URL in `config/services.php`.
- Updated `.env.example` to include Shodan API configuration options.

--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+SHODAN_API_KEY=
+SHODAN_BASE_URL=https://api.shodan.io
+
 VITE_APP_NAME="${APP_NAME}"
