Implement CVE data update command and enhance port security model
- Added `UpdateCveData` command to fetch and update CVE data for network ports from the NVD API.
- Introduced new fields in the `port_security` table to store detailed CVE information, including counts for different severity levels and recent critical CVEs.
- Updated `.env.example` to include NVD API configuration options.
- Created a specification document for the `UpdateCveData` command detailing API options and implementation requirements.
- Added tests to ensure the command functions correctly, including handling of API responses and caching of CVE data.
- Enhanced the `Port` model with factory support for testing.

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# NVD API Configuration (for CVE data)
+# Get free API key at: https://nvd.nist.gov/developers/request-an-api-key
+NVD_API_KEY=
+NVD_API_ENDPOINT=https://services.nvd.nist.gov/rest/json/cves/2.0
+CVE_UPDATE_DELAY_SECONDS=6
+CVE_BATCH_SIZE=5
