--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "owenvoke/blade-fontawesome": "^2.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.0",
         "laravel/pail": "^1.2.2",
