--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4.1.7",
+        "terser": "^5.44.0",
         "vite": "^6.2.4"
     },
     "dependencies": {
